--- a/src/sass/_backgrounds.sass
+++ b/src/sass/_backgrounds.sass
@@ -18,6 +18,12 @@
     background-repeat: no-repeat
     background-size: 30%
 
+.baivo-bg-full-white
+    background-image: url("data:image/svg+xml, %3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 330 427.38' class='svglogobaivo'%3E%3Cdev%3E%3Cstyle%3E .svglogobaivo%7B fill: white; opacity: 0.5; %7D %3C/style%3E%3C/dev%3E%3Cpolygon points='231.93 220.07 165.98 401.35 103.29 228.94 212.11 228.94 212.11 220.07 90.57 220.07 165.98 427.38 241.39 220.07 231.93 220.07' /%3E%3Crect x='160.99' y='102' width='8.87' height='114.51' /%3E%3Crect x='160.99' y='231.51' width='8.87' height='77.5' /%3E%3Crect x='119.89' y='198.43' width='36.42' height='8.87' /%3E%3Cpolygon points='184.65 198.43 174.9 198.43 174.9 207.3 184.65 207.3 211.33 207.3 241.43 207.3 166.02 0 90.61 207.3 100.07 207.3 166.02 26.02 228.71 198.43 211.33 198.43 184.65 198.43' /%3E%3Cpath d='M5.5, 213.69A159.55,159.55, 0, 0, 1, 134,57.21v-5.6a165,165, 0, 0, 0, 0, 324.16v-5.6A159.55, 159.55, 0, 0, 1, 5.5, 213.69Z' /%3E%3Cpath d='M196, 51.61v5.6a159.53, 159.53, 0, 0, 1, 0, 313v5.6a165, 165, 0, 0, 0,  0-324.16Z' /%3E%3C/svg%3E")// sass-lint:disable-line
+    background-position: center
+    background-repeat: no-repeat
+    background-size: 30%
+
 .chevron-bg-repeat
     // @include breakpoint-up(large)
     //     background-size: 90%
