--- a/src/sass/_corona.sass
+++ b/src/sass/_corona.sass
@@ -46,6 +46,7 @@
 
         @include breakpoint-down(small)
             font-size: 4vw
+
         &
             padding: 1%
 
@@ -57,7 +58,7 @@
         padding-left: 3%
 
     .corona-artikel
-        @include breakpoint-down(large)
+        @include breakpoint-up(medium)
             height: fit-content
             width: 70%
             margin: 3%
