--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -4,7 +4,8 @@ $green: #009900
 $red: #f32013
 $yellow: #f0d500
 
-$background-section-one-light: #ff550a
+// $background-section-one-light: #ff550a
+$background-section-one-light: $black
 
 $background-section-two-light: #ffa90c
 
