Small changes to Master

--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -1,11 +1,11 @@
-$black: #222
+black: #222
 $white: #fff
 $green: #009900
 $red: #f32013
 $yellow: #f0d500
 
-// $background-section-one-light: #ff550a
-$background-section-one-light: $black
+$background-section-one-light: #ff550a
+$background-section-one-light: #ff550a
 
 $background-section-two-light: #ffa90c
 
