--- a/src/sass/_animations.sass
+++ b/src/sass/_animations.sass
@@ -51,6 +51,14 @@
     to
         background-color: $fade-a
 
+@keyframes bg-colorgradient
+    from 
+        background-position: 0% 50%
+    50%
+        background-position: 100% 50%
+    To
+        background-position: 0% 50%
+
 @keyframes fill-colorfade
     from
         fill: $fade-a
