--- a/src/sass/_landingsection.sass
+++ b/src/sass/_landingsection.sass
@@ -2,10 +2,15 @@
     height: auto
     margin: auto
     width: 40%
+    
 
     h1
         font-size: 8vw
         letter-spacing: 1.5vw
+
+    .baivologo
+        width: 100%
+        height: auto
 
 .sozialnav
     align-items: center
